app/photo-service/k8s-photos-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photos
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: my-root-ca-issuer
spec:
  rules:
  - host: photos.example.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photo-service
            port:
              number: 80
  tls:
  - hosts:
    - photos.example.com
    secretName: photos-secret
